2005-03-19  Derek Price  <derek@ximbiot.com>

	Begin cleanup.  tag-ext test still broken.
	* admin.c (admin_fileproc): Remove obfuscations.
	* rcs.c (RCS_tag2rev): Remove obfuscations.  Gratuitous reformatting.
	(is_symbolic): New function.
	(RCS_gettag, RCS_nodeisbranch): s/isrevnumonly/!is_symbolic/.
	(RCS_whatbranch): s/rev/tag/ where appropriate.  Improve comments.
	Assert assumptions.  Gratuitous reformatting.  Process symbols first.
	(RCS_branch_head): Remove obfuscations.  Gratuitous reformatting.
	Assert assumptions.  Process symbols first.
	(truncate_revnum_in_place): Declare inline.
	(RCS_head): Improve comments.  Perform error checking.
	(RCS_getprevious): Remove obfuscations.
	(translate_tag): Improve comments.  Simplify.  Return branches when
	input is a branch name.
	(truncate_revnum): Simplify.
	* status.c: Gratuitous reformatting.
	* subr.c (isrevnumonly): Remove this function.
	* subr.h (isrevnumonly): Remove this proto.
	* sanity.sh (tag-ext): Cleanup.

2005-03-19  Derek Price  <derek@ximbiot.com>

	* admin.c, subr.h, update.c, rcs.h, subr.c, import.c, sanity.sh,
	cvs.h, vers_ts.c, tag.c, commit.c, rcs.c: Tag extensions added
	(Patch from Frank Hemer <frank@hemer.org>.)

2005-03-18  Derek Price  <derek@ximbiot.com>

	* server.c: Reindent pragmas.
	(become_proxy): Add parentheses for -Wall.

2005-03-18  Derek Price  <derek@ximbiot.com>

	* error.c (error): Simplify using vasnprintf.

2005-03-17  Mark D. Baushke  <mdb@cvshome.org>

	* admin.c (postadmin_proc): Cast NULL when it is an argument to
	stdarg function to ensure it is the correct type.
	* commit.c (precommit_proc): Ditto.
	* edit.c (notify_proc): Ditto.
	* fileattr.c (postwatch_proc): Ditto.
	* logmsg.c (logfile_write, verifymsg_proc): Ditto.
	* server.c (prepost_proxy_proc): Ditto.
	* subr.c (cmdlineescape): Ditto.
	* tag.c (posttag_proc): Ditto.
	(Thanks to a report from Derek Price <derek@ximbiot.com>.)
	
2005-03-17  Derek Price  <derek@ximbiot.com>

	* rcs.h (RCSNode): Improve comment.